<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.standingleague.StandingLeague">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/team"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:text="@string/p"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:text="@string/GM"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:text="@string/W"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:text="@string/D"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:text="@string/l"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:text="@string/point"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/pb_standing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_standing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</FrameLayout>